@@ -1281,7 +1281,8 @@ enum ImGuiDragFlags_
     ImGuiDragFlags_None                     = 0,
     ImGuiDragFlags_InvalidMask_             = 0x7000000F,   // [Internal] We treat using those bits as being potentially a 'float power' argument from the previous API that has got miscast to this enum, and will trigger an assert if needed.
     ImGuiDragFlags_ClampOnInput             = 1 << 4,       // Clamp value to min/max bounds (if any) when input manually with CTRL+Click. By default CTRL+Click allows going out of bounds.
-    ImGuiDragFlags_Logarithmic              = 1 << 5        // Should this widget be logarithmic? (linear otherwise)
+    ImGuiDragFlags_Logarithmic              = 1 << 5,       // Should this widget be logarithmic? (linear otherwise)
+    ImGuiDragFlags_NoRoundToFormat          = 1 << 6
 };
 
 // Flags for SliderFloat(), SliderInt() etc.
@@ -1290,7 +1291,8 @@ enum ImGuiSliderFlags_
     ImGuiSliderFlags_None                   = 0,
     ImGuiSliderFlags_InvalidMask_           = 0x7000000F,   // [Internal] We treat using those bits as being potentially a 'float power' argument from the previous API that has got miscast to this enum, and will trigger an assert if needed.
     ImGuiSliderFlags_ClampOnInput           = 1 << 4,       // Clamp value to min/max bounds when input manually with CTRL+Click. By default CTRL+Click allows going out of bounds.
-    ImGuiSliderFlags_Logarithmic            = 1 << 5        // Should this widget be logarithmic? (linear otherwise)
+    ImGuiSliderFlags_Logarithmic            = 1 << 5,       // Should this widget be logarithmic? (linear otherwise)
+    ImGuiSliderFlags_NoRoundToFormat        = 1 << 6
 };
 
 // Identify a mouse button.
